<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.algodatta</groupId>
  <artifactId>kc-sdet-automation</artifactId>
  <version>1.0.0</version>
  <packaging>pom</packaging>

  <modules>
    <module>framework-core</module>
    <module>framework-ui</module>
    <module>framework-api</module>
    <module>mocks</module>
    <module>tests</module>
  </modules>

  <properties>
    <maven.build.timestamp.format>yyyyMMdd-HHmmss</maven.build.timestamp.format>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <!-- Java version -->
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>

    <!-- Core framework -->
    <testng.version>7.10.2</testng.version>
    <selenium.version>4.22.0</selenium.version>
    <webdrivermanager.version>5.8.0</webdrivermanager.version>

    <!-- API -->
    <restassured.version>5.5.0</restassured.version>
    <jackson.version>2.17.2</jackson.version>

    <!-- Reporting -->
    <extentreports.version>5.1.2</extentreports.version>
    <extent.cucumber7.adapter.version>1.14.0</extent.cucumber7.adapter.version>
    <allure.version>2.27.0</allure.version>
    <allure.maven.version>2.12.0</allure.maven.version>
    <masterthought.reporting.version>5.8.1</masterthought.reporting.version>

    <!-- Logging -->
    <slf4j.version>2.0.13</slf4j.version>
    <logback.version>1.5.6</logback.version>

    <!-- BDD -->
    <cucumber.version>7.18.0</cucumber.version>

    <!-- ReportPortal -->
    <reportportal.cucumber7.agent.version>5.4.5</reportportal.cucumber7.agent.version>
    <reportportal.logback.version>5.4.0</reportportal.logback.version>

    <!-- Infrastructure -->
    <commons-io.version>2.16.1</commons-io.version>
    <wiremock.version>2.35.1</wiremock.version>
    <postgres.version>42.7.3</postgres.version>
    <hikari.version>5.1.0</hikari.version>

    <!-- ── Runtime defaults (all overridable via -D flags) ── -->
    <env>qa</env>
    <runMode>local</runMode>
    <browser>chrome</browser>
    <headless>false</headless>
    <threads>4</threads>
    <suiteXml>testng/smoke.xml</suiteXml>
    <groups></groups>
    <retry>0</retry>
    <gridUrl>http://localhost:4444/wd/hub</gridUrl>
    <mockPort>8089</mockPort>
    <rp.enable>false</rp.enable>
    <!-- Timestamped output: override with -Dtests.build.dir=target_YYYYMMDD_HHmmss -->
    <tests.build.dir>target</tests.build.dir>
    <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- TestNG -->
      <dependency><groupId>org.testng</groupId><artifactId>testng</artifactId><version>${testng.version}</version></dependency>

      <!-- Selenium -->
      <dependency><groupId>org.seleniumhq.selenium</groupId><artifactId>selenium-java</artifactId><version>${selenium.version}</version></dependency>
      <dependency><groupId>io.github.bonigarcia</groupId><artifactId>webdrivermanager</artifactId><version>${webdrivermanager.version}</version></dependency>

      <!-- REST Assured -->
      <dependency><groupId>io.rest-assured</groupId><artifactId>rest-assured</artifactId><version>${restassured.version}</version></dependency>
      <dependency><groupId>io.rest-assured</groupId><artifactId>json-schema-validator</artifactId><version>${restassured.version}</version></dependency>

      <!-- Jackson -->
      <dependency><groupId>com.fasterxml.jackson.core</groupId><artifactId>jackson-databind</artifactId><version>${jackson.version}</version></dependency>
      <dependency><groupId>com.fasterxml.jackson.core</groupId><artifactId>jackson-core</artifactId><version>${jackson.version}</version></dependency>
      <dependency><groupId>com.fasterxml.jackson.core</groupId><artifactId>jackson-annotations</artifactId><version>${jackson.version}</version></dependency>

      <!-- Extent Reports -->
      <dependency><groupId>com.aventstack</groupId><artifactId>extentreports</artifactId><version>${extentreports.version}</version></dependency>
      <dependency><groupId>tech.grasshopper</groupId><artifactId>extentreports-cucumber7-adapter</artifactId><version>${extent.cucumber7.adapter.version}</version></dependency>

      <!-- Allure -->
      <dependency><groupId>io.qameta.allure</groupId><artifactId>allure-testng</artifactId><version>${allure.version}</version></dependency>
      <dependency><groupId>io.qameta.allure</groupId><artifactId>allure-rest-assured</artifactId><version>${allure.version}</version></dependency>

      <!-- Logging -->
      <dependency><groupId>org.slf4j</groupId><artifactId>slf4j-api</artifactId><version>${slf4j.version}</version></dependency>
      <dependency><groupId>ch.qos.logback</groupId><artifactId>logback-classic</artifactId><version>${logback.version}</version></dependency>

      <!-- Cucumber -->
      <dependency><groupId>io.cucumber</groupId><artifactId>cucumber-java</artifactId><version>${cucumber.version}</version></dependency>
      <dependency><groupId>io.cucumber</groupId><artifactId>cucumber-testng</artifactId><version>${cucumber.version}</version></dependency>
      <dependency><groupId>io.cucumber</groupId><artifactId>cucumber-picocontainer</artifactId><version>${cucumber.version}</version></dependency>
      <dependency><groupId>io.cucumber</groupId><artifactId>cucumber-plugin</artifactId><version>${cucumber.version}</version></dependency>

      <!-- Infrastructure -->
      <dependency><groupId>commons-io</groupId><artifactId>commons-io</artifactId><version>${commons-io.version}</version></dependency>
      <dependency><groupId>com.github.tomakehurst</groupId><artifactId>wiremock-jre8</artifactId><version>${wiremock.version}</version></dependency>
      <dependency><groupId>org.postgresql</groupId><artifactId>postgresql</artifactId><version>${postgres.version}</version></dependency>
      <dependency><groupId>com.zaxxer</groupId><artifactId>HikariCP</artifactId><version>${hikari.version}</version></dependency>

      <!-- ReportPortal -->
      <dependency><groupId>com.epam.reportportal</groupId><artifactId>agent-java-cucumber7</artifactId><version>${reportportal.cucumber7.agent.version}</version></dependency>
      <dependency><groupId>com.epam.reportportal</groupId><artifactId>logger-java-logback</artifactId><version>${reportportal.logback.version}</version></dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <!--
      Note: Keep this comment free of double-dash sequences.
      We intentionally use source/target (not the compiler "release" option) because some CI
      environments inject extra Java module flags via JAVA_TOOL_OPTIONS, which can conflict with
      that option.
    -->
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.15.0</version>
        <configuration>
          <encoding>${project.build.sourceEncoding}</encoding>
          <release>21</release>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
      </plugin>

      <plugin>
        <groupId>io.qameta.allure</groupId>
        <artifactId>allure-maven</artifactId>
        <version>${allure.maven.version}</version>
      </plugin>
    </plugins>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.15.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.5</version>
        </plugin>
        <plugin>
          <groupId>net.masterthought</groupId>
          <artifactId>maven-cucumber-reporting</artifactId>
          <version>${masterthought.reporting.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <!--
    Profiles only override the 'env' property — all other versioned properties
    live in the main <properties> block above to avoid duplication and drift.
  -->
  <profiles>
    <profile><id>local</id><properties><env>local</env></properties></profile>
    <profile><id>dev</id>  <properties><env>dev</env></properties></profile>
    <profile><id>qa</id>   <properties><env>qa</env></properties></profile>
    <profile><id>uat</id>  <properties><env>uat</env></properties></profile>
    <profile><id>stage</id><properties><env>stage</env></properties></profile>
    <profile><id>prod</id> <properties><env>prod</env></properties></profile>
  </profiles>

</project>
